fix: Убрать flex-gap из комментариев

--- a/blocks/new-comment/__choice/new-comment__choice.css
+++ b/blocks/new-comment/__choice/new-comment__choice.css
@@ -1,4 +1,3 @@
 .new-comment__choice {
   display: flex;
-  gap: 16px;
 }
