--- a/blocks/new-comment/__option/new-comment__option.css
+++ b/blocks/new-comment/__option/new-comment__option.css
@@ -8,9 +8,13 @@
   border: none;
   border-radius: 20px;
   box-shadow: -5px 15px 17px 0 rgba(116, 156, 201, .41);
-  margin: 0 0 32px 0;
+  margin: 0 16px 32px 0;
   background-color: white;
   outline: none;
+}
+
+.new-comment__option:last-of-type {
+  margin-right: 0;
 }
 
 .new-comment__option:hover {
